# testScout

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run_jobscoach_exploration.py  test_browser_js.py
.github/workflows/: ci.yml
ai_e2e/: __init__.py  agent.py  assertions.py  context.py  discovery.py  explorer.py
examples/: explore_app.py  explore_wikipedia.py  test_any_app.py  test_with_login.py
src/testscout/: __init__.py  agent.py  assertions.py  audit.py  cli.py  context.py  discovery.py  explorer.py  presentation.py
src/testscout/backends/: __init__.py  base.py  gemini.py  openai.py
tests/: __init__.py  conftest.py  test_agent.py  test_context.py  test_discovery.py  test_e2e_real.py
