[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testscout"
version = "0.1.0"
description = "AI-Powered E2E Testing Framework - Hybrid DOM + Vision approach"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = [
    "testing",
    "e2e",
    "playwright",
    "ai",
    "vision",
    "automation",
    "gemini",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.3.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/rhowardstone/testScout"
Repository = "https://github.com/rhowardstone/testScout"
Issues = "https://github.com/rhowardstone/testScout/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_e2e*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ai_e2e: marks tests as AI-powered E2E tests (may be skipped without API key)",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
